# bsuir-cw-library

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml  nginx-config.conf  vcpkg.json
.github/workflows/: build-and-push-docker-image.yml  deploy-image-to-prod.yml
CMake/: win32_toolchain.cmake
Source/: CMakeLists.txt  test.cpp
Source/Client/: App.cpp  App.h  AppState.cpp  AppState.h  CMakeLists.txt  client.rc  conanfile.txt  main.cpp
Source/Client/Dto/: AppConfig.h  File.h
Source/Client/Exceptions/: ApiErrorException.cpp  ApiErrorException.h
Source/Client/Helpers/: ChoiceParser.h  DateParser.h  NotebookHelper.h
Source/Client/Models/: Author.h  Book.h  BookInstance.h  BookWithdraw.h  Publisher.h  Reader.h
Source/Client/Repository/: AuthorsRepository.cpp  AuthorsRepository.h  BookRepository.cpp  BookRepository.h  PublishersRepository.cpp  PublishersRepository.h  ReadersRepository.cpp  ReadersRepository.h  Repository.h
Source/Client/Services/Api/: AuthService.cpp  AuthService.h  PingService.cpp  PingService.h
Source/Client/Services/HttpClient/: HttpClient.cpp  HttpClient.h  HttpHeader.cpp  HttpHeader.h  HttpHeadersCollection.cpp  HttpHeadersCollection.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
Source/Client/Utils/: Event.h
Source/Client/Windows/: DebtorsListPanel.cpp  DebtorsListPanel.h  EntityCreationPanel.h  EntityList.h  EntityViewPanel.h  ErrorsPanel.cpp  ErrorsPanel.h  HelpPanel.cpp  HelpPanel.h  InstanceWithdrawPanel.cpp  InstanceWithdrawPanel.h  LoginPanel.cpp  LoginPanel.h  MainWindow.cpp  MainWindow.h  WelcomeWindow.cpp  WelcomeWindow.h
Source/Client/Windows/Authors/: AuthorCreationPanel.cpp  AuthorCreationPanel.h  AuthorViewPanel.cpp  AuthorViewPanel.h  AuthorsFilter.cpp  AuthorsFilter.h  AuthorsListPanel.cpp  AuthorsListPanel.h
Source/Client/Windows/Books/: BookCreationPanel.cpp  BookCreationPanel.h  BookViewPanel.cpp  BookViewPanel.h  BooksFilter.cpp  BooksFilter.h  BooksListPanel.cpp  BooksListPanel.h
Source/Client/Windows/Publishers/: PublisherCreationPanel.cpp  PublisherCreationPanel.h  PublisherViewPanel.cpp  PublisherViewPanel.h  PublishersFilter.cpp  PublishersFilter.h  PublishersListPanel.cpp  PublishersListPanel.h
Source/Client/Windows/Readers/: ReaderCreationPanel.cpp  ReaderCreationPanel.h  ReaderViewPanel.cpp  ReaderViewPanel.h  ReadersFilter.cpp  ReadersFilter.h  ReadersListPanel.cpp  ReadersListPanel.h
Source/Client/Windows/WxBuilder/: Client.fbp  ClientWindows.cpp  ClientWindows.h  Header.h  WxBuilder.h
Source/Server/: CMakeLists.txt  conanfile.txt  config.json.example  main.cpp
Source/Server/Controllers/: ApiV1Auth.cpp  ApiV1Auth.h  ApiV1Authors.cpp  ApiV1Authors.h  ApiV1Books.cpp  ApiV1Books.h  ApiV1Ping.cpp  ApiV1Ping.h  ApiV1Publishers.cpp  ApiV1Publishers.h  ApiV1Readers.cpp  ApiV1Readers.h  CrudController.h  IndexController.cpp  IndexController.h  PingController.cpp  PingController.h
Source/Server/Database/: 1_drop_create_database.sql  drop_create_database.sql
Source/Server/Dto/: RepoQueryResult.h
Source/Server/Filters/: AuthFilter.cpp  AuthFilter.h
Source/Server/Helpers/: DbClientHelper.h  ResponseHelpers.cpp  ResponseHelpers.h  TrantorDateHelper.h
Source/Server/Models/: Author.cpp  Author.h  Authors.cc  Authors.h  BookHistory.cc  BookHistory.h  BookInstances.cc  BookInstances.h  BookWithdraws.cc  BookWithdraws.h  Books.cc  Books.h  IModel.h  Publisher.cpp  Publisher.h  Publishers.cc  Publishers.h  Readers.cc  Readers.h  model.json.example
Source/Server/Repositories/: AuthorMySqlRepository.cpp  AuthorMySqlRepository.h  PublisherMySqlRepository.cpp  PublisherMySqlRepository.h
Source/Server/Services/: FileStorageService.cpp  FileStorageService.h  JwtService.cpp  JwtService.h
Source/Server/Validators/: AuthorsValidator.cpp  AuthorsValidator.h  BookInstanceValidator.cpp  BookInstanceValidator.h  BookWithdrawValidator.cpp  BookWithdrawValidator.h  BooksValidator.cpp  BooksValidator.h  IValidator.h  PublishersValidator.cpp  PublishersValidator.h  ReadersValidator.cpp  ReadersValidator.h
Source/Server/Views/: index.csp
